@@ -372,7 +372,7 @@ public abstract class GUIUnit extends GUIData implements ActionListener
                         guiBooleanElement.setIdentifier(sFieldId);
                         guiBooleanElement.setLabel(sLabel);
                         guiBooleanElement.setDefaultValue(bDefaultValue);
-                        guiBooleanElement.setValue(new Boolean(bDefaultValue).toString());
+                        guiBooleanElement.setValue(Boolean.valueOf(bDefaultValue).toString());
                         guiBooleanElement.setStyle(sStyle);
                         guiBooleanElement.setParentUnit(this);
                         // Ajout du widget dans le vecteur de donnees de l'unite
@@ -419,7 +419,7 @@ public abstract class GUIUnit extends GUIData implements ActionListener
                         guiCharElement.setIdentifier(sFieldId);
                         guiCharElement.setLabel(sLabel);
                         guiCharElement.setDefaultValue(cDefaultValue);
-                        guiCharElement.setValue(new Character(cDefaultValue).toString());
+                        guiCharElement.setValue(Character.valueOf(cDefaultValue).toString());
                         guiCharElement.setStyle(sStyle);
                         guiCharElement.setParentUnit(this);
                         // Ajout du widget dans le vecteur de donnees de l'unite
@@ -524,7 +524,7 @@ public abstract class GUIUnit extends GUIData implements ActionListener
                         guiDoubleElement.setIdentifier(sFieldId);
                         guiDoubleElement.setLabel(sLabel);
                         guiDoubleElement.setDefaultValue(dDefaultValue);
-                        guiDoubleElement.setValue(new Double(dDefaultValue).toString());
+                        guiDoubleElement.setValue(Double.valueOf(dDefaultValue).toString());
                         guiDoubleElement.setStyle(sStyle);
                         guiDoubleElement.setMinValue(dMin);
                         guiDoubleElement.setMaxValue(dMax);
@@ -580,7 +580,7 @@ public abstract class GUIUnit extends GUIData implements ActionListener
                         guiIntElement.setIdentifier(sFieldId);
                         guiIntElement.setLabel(sLabel);
                         guiIntElement.setDefaultValue(nDefaultValue);
-                        guiIntElement.setValue(new Integer(nDefaultValue).toString());
+                        guiIntElement.setValue(Integer.valueOf(nDefaultValue).toString());
                         guiIntElement.setStyle(sStyle);
                         guiIntElement.setMinValue(nMin);
                         guiIntElement.setMaxValue(nMax);
